The site is alive.

--- a/ListaI.html
+++ b/ListaI.html
@@ -391,12 +391,6 @@ div.tocify {
 <li>
   <a href="aulas.html">Aulas</a>
 </li>
-<li>
-  <a href="referencias.html">Referências</a>
-</li>
-<li>
-  <a href="recursos.html">Programas</a>
-</li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Listas de exercícios
@@ -406,6 +400,9 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
+    </li>
+    <li>
+      <a href="ListaII.html">Lista II - Verossimilhança</a>
     </li>
   </ul>
 </li>
@@ -424,6 +421,24 @@ div.tocify {
     </li>
     <li>
       <a href="Code/LGN.R">Leis dos Grandes Números</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Slides
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Slides/Rev_ProbI.pdf">Revisão: Probabilidade Básica [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Rev_ProbII.pdf">Revisão: Va's e Distribuições [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
   </ul>
 </li>
@@ -456,6 +471,12 @@ div.tocify {
       <a href="Dados/dados_pe.csv">Experimento empresa de calçados [csv]</a>
     </li>
   </ul>
+</li>
+<li>
+  <a href="recursos.html">Programas</a>
+</li>
+<li>
+  <a href="referencias.html">Referências</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
