--- a/aulas.html
+++ b/aulas.html
@@ -285,12 +285,6 @@ $(document).ready(function () {
 <li>
   <a href="aulas.html">Aulas</a>
 </li>
-<li>
-  <a href="referencias.html">Referências</a>
-</li>
-<li>
-  <a href="recursos.html">Programas</a>
-</li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Listas de exercícios
@@ -300,6 +294,9 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
+    </li>
+    <li>
+      <a href="ListaII.html">Lista II - Verossimilhança</a>
     </li>
   </ul>
 </li>
@@ -318,6 +315,24 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="Code/LGN.R">Leis dos Grandes Números</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Slides
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Slides/Rev_ProbI.pdf">Revisão: Probabilidade Básica [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Rev_ProbII.pdf">Revisão: Va's e Distribuições [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
   </ul>
 </li>
@@ -350,6 +365,12 @@ $(document).ready(function () {
       <a href="Dados/dados_pe.csv">Experimento empresa de calçados [csv]</a>
     </li>
   </ul>
+</li>
+<li>
+  <a href="recursos.html">Programas</a>
+</li>
+<li>
+  <a href="referencias.html">Referências</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -416,25 +437,27 @@ table.header {
 </ul>
 <p><strong>Semana 2</strong></p>
 <ul>
-<li>Idéias: propriedades de estimadores, não-viés, consistência, distribuição e eficiência.</li>
-<li>Consolidação dos conceitos apresentados.</li>
-<li>Exemplos baseados em simulação das propriedades apresentadas.</li>
+<li>Idéias: Verossimilhança.</li>
+<li>Idéias: Funções de verossimilhança e escore e estimação pontual.</li>
+<li>Idéias: Estimação intervalar e testes de hipóteses.</li>
 </ul>
 <p><strong>Semana 3</strong></p>
 <ul>
-<li>Revisão geral e formalização matemática.</li>
-<li>Revisão geral e formalização matemática.</li>
-<li>Revisão geral e formalização matemática.</li>
+<li>Prática I - Empresa de calçados.</li>
+<li>Prática I - Empresa de calçados.</li>
+<li>Prática I - Empresa de calçados.</li>
 </ul>
 <p><strong>Parte II - Revisão e exemplificação computacional de ferramentas da teoria de probabilidades.</strong></p>
 <p><strong>Semana 4</strong></p>
 <ul>
-<li>Exemplo motivacional.</li>
-<li>Lei dos grandes números (LLN) e tipos de convergência.</li>
-<li>Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência.</li>
+<li>Revisão de probabilidade básica.</li>
+<li>Revisão de probabilidade básica.</li>
+<li>Distribuições de probabilidade.</li>
 </ul>
 <p><strong>Semana 5</strong></p>
 <ul>
+<li>Lei dos grandes números (LLN) e tipos de convergência.</li>
+<li>Consistência de estimadores. Desigualdade de Chebychev’s, Chebychev’s LLN. Discussão tipos de convergência.</li>
 <li>Kolmogorov’s LLN, Markov’s LLN, LLNs para v.a correlacionadas.</li>
 <li>Resultados para manipulação de limites em probabilidade.</li>
 <li>Exemplos de simulação.</li>
