--- a/index.html
+++ b/index.html
@@ -285,12 +285,6 @@ $(document).ready(function () {
 <li>
   <a href="aulas.html">Aulas</a>
 </li>
-<li>
-  <a href="referencias.html">Referências</a>
-</li>
-<li>
-  <a href="recursos.html">Programas</a>
-</li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Listas de exercícios
@@ -300,6 +294,9 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li>
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
+    </li>
+    <li>
+      <a href="ListaII.html">Lista II - Verossimilhança</a>
     </li>
   </ul>
 </li>
@@ -318,6 +315,24 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="Code/LGN.R">Leis dos Grandes Números</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Slides
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Slides/Rev_ProbI.pdf">Revisão: Probabilidade Básica [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Rev_ProbII.pdf">Revisão: Va's e Distribuições [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
   </ul>
 </li>
@@ -350,6 +365,12 @@ $(document).ready(function () {
       <a href="Dados/dados_pe.csv">Experimento empresa de calçados [csv]</a>
     </li>
   </ul>
+</li>
+<li>
+  <a href="recursos.html">Programas</a>
+</li>
+<li>
+  <a href="referencias.html">Referências</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
