The site is alive.

--- a/ListaI.html
+++ b/ListaI.html
@@ -440,6 +440,9 @@ div.tocify {
     <li>
       <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
+    <li>
+      <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
