--- a/README.html
+++ b/README.html
@@ -487,6 +487,9 @@ div.tocify {
     <li>
       <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
+    <li>
+      <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
