--- a/recursos.html
+++ b/recursos.html
@@ -334,6 +334,9 @@ $(document).ready(function () {
     <li>
       <a href="Slides/TeoremasLimites.pdf">Revisão: Teoremas Limites [PDF]</a>
     </li>
+    <li>
+      <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
