The site is alive.

--- a/ListaI.html
+++ b/ListaI.html
@@ -404,6 +404,9 @@ div.tocify {
     <li>
       <a href="ListaII.html">Lista II - Verossimilhança</a>
     </li>
+    <li>
+      <a href="ListaIII.html">Lista III - Teoria assintótica da verossimilhança</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
