--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@ $(document).ready(function () {
     <li>
       <a href="ListaII.html">Lista II - Verossimilhança</a>
     </li>
+    <li>
+      <a href="ListaIII.html">Lista III - Teoria assintótica da verossimilhança</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
