The site is alive.

--- a/ListaIII.html
+++ b/ListaIII.html
@@ -567,6 +567,20 @@ table.header {
 <li>Considere quatro observações <span class="math inline">\(y_1 &lt; 10\)</span>, <span class="math inline">\(y_2 &gt; 10\)</span>, <span class="math inline">\(5 &lt; y_3 &lt; 10\)</span> e <span class="math inline">\(y_4 = 10\)</span>, provenientes de uma população Poisson com esperança <span class="math inline">\(\mu\)</span>. Obtenha o estimador de máxima verossimilhança para <span class="math inline">\(\mu\)</span>. Dica use um otimizador numérico como a optim() em R.</li>
 </ol>
 </div>
+<div id="familia-exponencial" class="section level1">
+<h1><span class="header-section-number">3</span> Família exponencial</h1>
+<ol style="list-style-type: decimal">
+<li>Escreva as seguintes distribuições na forma da família exponencial:
+<ol style="list-style-type: lower-alpha">
+<li>Normal (variância conhecida).</li>
+<li>Exponencial.</li>
+<li>Poisson.</li>
+<li>Binomial.</li>
+<li>Normal inversa.</li>
+<li>Geométrica.</li>
+</ol></li>
+</ol>
+</div>
 
 <style type="text/css">
 hr.footer {
