The site is alive.

--- a/ListaI.html
+++ b/ListaI.html
@@ -446,6 +446,9 @@ div.tocify {
     <li>
       <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
     </li>
+    <li>
+      <a href="Slides/CapIII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
