--- a/notas.html
+++ b/notas.html
@@ -389,6 +389,9 @@ $(document).ready(function () {
     <li>
       <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
     </li>
+    <li>
+      <a href="Slides/CapIII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
