--- a/ListaII.html
+++ b/ListaII.html
@@ -425,6 +425,9 @@ div.tocify {
     <li>
       <a href="Code/LGN.R">Leis dos Grandes Números</a>
     </li>
+    <li>
+      <a href="Code/Weibull.R">Modelo Weibull</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
