--- a/notas.html
+++ b/notas.html
@@ -368,6 +368,9 @@ $(document).ready(function () {
     <li>
       <a href="Code/LGN.R">Leis dos Grandes Números</a>
     </li>
+    <li>
+      <a href="Code/Weibull.R">Modelo Weibull</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
