--- a/index.html
+++ b/index.html
@@ -344,7 +344,25 @@ $(document).ready(function () {
       <a href="Slides/CapII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
     </li>
     <li>
-      <a href="Slides/CapIII.pdf">Log-verossimilhança e suas derivadas [PDF]</a>
+      <a href="Slides/CapIII.pdf">Teoria assintótica [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/CapIV.pdf">Vetor de parâmetros [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/CapV.pdf">Suficiência [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/NonLinearSystem.pdf">Sistemas não-lineares [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Otimizacao.pdf">Otimização [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/ComputacaoI.pdf">Computação I [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/ComputacaoII.pdf">Modelos de regressão [PDF]</a>
     </li>
   </ul>
 </li>
