The site is alive.

--- a/README.html
+++ b/README.html
@@ -449,10 +449,7 @@ div.tocify {
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
     </li>
     <li>
-      <a href="ListaII.html">Lista II - Verossimilhança</a>
-    </li>
-    <li>
-      <a href="ListaIII.html">Lista III - Teoria assintótica da verossimilhança</a>
+      <a href="ListaIII.html">Lista II - statística Inferencial</a>
     </li>
   </ul>
 </li>
