--- a/aulas.html
+++ b/aulas.html
@@ -296,10 +296,7 @@ $(document).ready(function () {
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
     </li>
     <li>
-      <a href="ListaII.html">Lista II - Verossimilhança</a>
-    </li>
-    <li>
-      <a href="ListaIII.html">Lista III - Teoria assintótica da verossimilhança</a>
+      <a href="ListaIII.html">Lista II - statística Inferencial</a>
     </li>
   </ul>
 </li>
