The site is alive.

--- a/aulas.html
+++ b/aulas.html
@@ -296,7 +296,7 @@ $(document).ready(function () {
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
     </li>
     <li>
-      <a href="ListaIII.html">Lista II - statística Inferencial</a>
+      <a href="ListaIII.html">Lista II - Estatística Inferencial</a>
     </li>
   </ul>
 </li>
@@ -348,6 +348,9 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="Slides/CapV.pdf">Suficiência [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Testes.pdf">Testes de hipóteses [PDF]</a>
     </li>
     <li>
       <a href="Slides/NonLinearSystem.pdf">Sistemas não-lineares [PDF]</a>
@@ -402,7 +405,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/CE085">GitHub</a>
+  <a href="https://github.com/leg-ufpr/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
