--- a/recursos.html
+++ b/recursos.html
@@ -296,7 +296,7 @@ $(document).ready(function () {
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
     </li>
     <li>
-      <a href="ListaIII.html">Lista II - statística Inferencial</a>
+      <a href="ListaIII.html">Lista II - Estatística Inferencial</a>
     </li>
   </ul>
 </li>
@@ -348,6 +348,9 @@ $(document).ready(function () {
     </li>
     <li>
       <a href="Slides/CapV.pdf">Suficiência [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Testes.pdf">Testes de hipóteses [PDF]</a>
     </li>
     <li>
       <a href="Slides/NonLinearSystem.pdf">Sistemas não-lineares [PDF]</a>
@@ -402,7 +405,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/CE085">GitHub</a>
+  <a href="https://github.com/leg-ufpr/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -456,8 +459,8 @@ table.header {
 
 
 <p>O curso prevê conteúdo computacional. Nas páginas do curso, você verá um botão escrito <code>Code</code> acima de algumas tabelas e gráficos. Ao clicar nesse botão, é revelado o código que foi utilizado para gerar aquele resultado, em linguagem R. O uso de programas computacionais auxilia o entendimento do conteúdo do curso, e os códigos em R servem como ilustração.</p>
-<div id="programa-para-estatistica" class="section level2">
-<h2><span class="header-section-number">0.1</span> Programa para estatística</h2>
+<div id="programa-para-estatistica" class="section level1">
+<h1><span class="header-section-number">1</span> Programa para estatística</h1>
 <ul>
 <li><a href="http://www.r-project.org">The R project for Statistical Computing</a>: página do programa <strong>R</strong>
 <ul>
@@ -467,16 +470,16 @@ table.header {
 </ul></li>
 </ul>
 </div>
-<div id="programas-para-matematica-simbolica" class="section level2">
-<h2><span class="header-section-number">0.2</span> Programas para matemática simbólica</h2>
+<div id="programas-para-matematica-simbolica" class="section level1">
+<h1><span class="header-section-number">2</span> Programas para matemática simbólica</h1>
 <ul>
 <li><a href="http://www.wolframalpha.com">Wolfram alpha</a></li>
 <li><a href="http://maxima.sourceforge.net">Maxima</a> (e interface <a href="http://andrejv.github.com/wxmaxima/">wxmaxima</a>)</li>
 <li><a href="http://yacas.sourceforge.net">Yacas</a></li>
 </ul>
 </div>
-<div id="outros-recursos" class="section level2">
-<h2><span class="header-section-number">0.3</span> Outros recursos</h2>
+<div id="outros-recursos" class="section level1">
+<h1><span class="header-section-number">3</span> Outros recursos</h1>
 <ul>
 <li><a href="https://pt-br.libreoffice.org">LibreOffice</a> suíte de programas semelhante ao MS-Office (editor de texto, banco de dados, apresentação e planilha) gratuito</li>
 <li><a href="https://www.google.com/sheets/about">Google sheets</a>. Para instalar o <em>add-on</em> de estatística: - Add-Ons -&gt; Get Add-Ons -&gt; Procure por “Statistics” -&gt; Procure o add-on de “Google Statisticians and Engineers”</li>
