--- a/README.html
+++ b/README.html
@@ -449,7 +449,7 @@ div.tocify {
       <a href="ListaI.html">Lista I - Revisão de probabilidade</a>
     </li>
     <li>
-      <a href="ListaIII.html">Lista II - statística Inferencial</a>
+      <a href="ListaIII.html">Lista II - Estatística Inferencial</a>
     </li>
   </ul>
 </li>
@@ -501,6 +501,9 @@ div.tocify {
     </li>
     <li>
       <a href="Slides/CapV.pdf">Suficiência [PDF]</a>
+    </li>
+    <li>
+      <a href="Slides/Testes.pdf">Testes de hipóteses [PDF]</a>
     </li>
     <li>
       <a href="Slides/NonLinearSystem.pdf">Sistemas não-lineares [PDF]</a>
@@ -555,7 +558,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/wbonat/CE085">GitHub</a>
+  <a href="https://github.com/leg-ufpr/CE085">GitHub</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
